--- a/index.html
+++ b/index.html
@@ -11,6 +11,31 @@
 
   </head>
   <body>
+
+    <div class="grid-container1">
+
+
+      <div class="">
+        <div class="large-12">
+          <div class="callout">
+            <div id="video" class="flex-video1">
+             
+
+            <iframe width="840" height="470" src="https://www.youtube.com/embed/7GZG0YUtspI?rel=0&amp;showinfo=0&autoplay=1" frameborder="0" encrypted-media" allowfullscreen></iframe><span class="name"><img src="images/prairieLogo.png"></img></span>
+          </div>
+
+
+      </div>
+               </div>
+
+             </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+
     <div class="grid-container">
       <div class="grid-x grid-padding-x">
         <div class="large-12 cell">
@@ -23,14 +48,14 @@
           <div class="callout  purplebg">
             <div id="video" class="flex-video">
             <h3>Towneley Golf Course 18 Hole Flyover</h3>
-            <iframe width="840" height="470" src="https://www.youtube.com/embed/PWHyFnAuiVQ?rel=0&amp;showinfo=0&autoplay=1" frameborder="0" encrypted-media" allowfullscreen></iframe>
+            <iframe width="840" height="470" src="https://www.youtube.com/embed/x6MadEl2giI?rel=0&amp;showinfo=0&autoplay=1" frameborder="0" encrypted-media" allowfullscreen></iframe>
           </div>
             <p>Click on a ball</p>
              <div class="grid-x grid-padding-x">
               <div class="large-4 medium-4 small-4 cell">
                 <div class="ball">
       <div class="rounded-social-buttons purplebg">
-
+<p>TOWNELEY GOLF COURSE</p>
         <img id="Ball" src="images/Ball1.png" alt="Hole 1" onclick="video()">
         <img id="Ball" src="images/Ball2.png" alt="Hole 2" onclick="video1()">
         <img id="Ball" src="images/Ball3.png" alt="Hole 3" onclick="video2()">
@@ -40,11 +65,7 @@
         <img id="Ball" src="images/Ball7.png" alt="Hole 7" onclick="video6()">
         <img id="Ball" src="images/Ball8.png" alt="Hole 8" onclick="video7()">
         <img id="Ball" src="images/Ball9.png" alt="Hole 9" onclick="video8()">
-      </div>
-               </div>
-              <div class="large-12 cell">
-              <div class="ball">
-      <div class="Ballcentered purplebg">
+
 
         <img id="Ball" src="images/Ball10.png" alt="hole 10" onclick="video9()">
         <img id="Ball" src="images/Ball11.png" alt="hole 11" onclick="video10()">
