--- a/Bootstrap.html
+++ b/Bootstrap.html
@@ -8,12 +8,34 @@
       <link rel="stylesheet" href="css/BootstrapCSS.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+      <link rel="stylesheet" href="css/Newfoundation.css">
       <link rel="stylesheet" href="Prairiecss/style.css">
 </head>
 <body>
 
 
 
+<!-- Code for the Header page and video -->
+    <div class="grid-container1">
+        <div class="">
+            <div id="video" class="embed-responsive embed-responsive-16by9">
+            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/7GZG0YUtspI?autoplay=1&controls=0&loop=1&playlist=7GZG0YUtspI&showinfo=0" frameborder="0"></iframe><span class="name"><img src="images/prairieLogo.png"></img></span>
+            </div>
+        </div>
+    </div>
+
+ <!-- End of Header Code -->
+<hr>
+ <!-- Code for the Brasserie page and video -->
+    <div class="grid-container1">
+        <div class="">
+            <div id="video" class="embed-responsive embed-responsive-16by9">
+            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/tju6KKxSF80?autoplay=1&controls=0&loop=1&playlist=tju6KKxSF80&showinfo=0" frameborder="0"></iframe><span class="name"><img src="images/prairieLogo.png"></img></span>
+            </div>
+        </div>
+    </div>
+ <!-- End of Brasserie Code -->
+ <hr>
 
 <div class="container">
   <h1>Towneley Golf Course 18 Hole Flyover</h1>
@@ -28,11 +50,9 @@
       <img id="Ball" src="images/Ball1.png" alt="Hole 1" onclick="video()">
       <img id="Ball" src="images/Ball2.png" alt="Hole 2" onclick="video1()">
       <img id="Ball" src="images/Ball3.png" alt="Hole 3" onclick="video2()">
-
       <img id="Ball" src="images/Ball4.png" alt="Hole 4" onclick="video3()">
       <img id="Ball" src="images/Ball5.png" alt="Hole 5" onclick="video4()">
       <img id="Ball" src="images/Ball6.png" alt="Hole 6" onclick="video5()">
-
       <img id="Ball" src="images/Ball7.png" alt="Hole 7" onclick="video6()">
       <img id="Ball" src="images/Ball8.png" alt="Hole 8" onclick="video7()">
       <img id="Ball" src="images/Ball9.png" alt="Hole 9" onclick="video8()">
