--- a/index.html
+++ b/index.html
@@ -10,82 +10,72 @@
     <link rel="stylesheet" href="Prairiecss/style.css">
 
   </head>
+
+
   <body>
 
+<!-- Code for the Header page and video -->
     <div class="grid-container1">
-
-
-      <div class="">
         <div class="large-12">
-          <div class="callout">
             <div id="video" class="flex-video1">
-             
-
-            <iframe width="840" height="470" src="https://www.youtube.com/embed/7GZG0YUtspI?rel=0&amp;showinfo=0&autoplay=1" frameborder="0" encrypted-media" allowfullscreen></iframe><span class="name"><img src="images/prairieLogo.png"></img></span>
-          </div>
-
-
-      </div>
-               </div>
-
-             </div>
+            <iframe src="https://www.youtube.com/embed/7GZG0YUtspI?autoplay=1&controls=0&loop=1&playlist=7GZG0YUtspI&showinfo=0" frameborder="0"></iframe><span class="name"><img src="images/prairieLogo.png"></img></span>
             </div>
-          </div>
         </div>
-      </div>
+    </div>
 
-
+ <!-- End of Header Code -->
+<hr>
+ <!-- Code for the Brasserie page and video -->
+    <div class="grid-container1">
+        <div class="large-12">
+            <div id="video" class="flex-video1">
+            <iframe src="https://www.youtube.com/embed/tju6KKxSF80?autoplay=1&controls=0&loop=1&playlist=tju6KKxSF80&showinfo=0" frameborder="0"></iframe><span class="name"><img src="images/prairieLogo.png"></img></span>
+            </div>
+        </div>
+    </div>
+ <!-- End of Brasserie Code -->
 
     <div class="grid-container">
+    <hr>
       <div class="grid-x grid-padding-x">
         <div class="large-12 cell">
-          <h1></h1>
-        </div>
-      </div>
-
-      <div class="grid-x grid-padding-x">
-        <div class="large-12 cell">
-          <div class="callout  purplebg">
-            <div id="video" class="flex-video">
+          <div class="callout">
+            <div id="video" class="flex-video  purplebg">
             <h3>Towneley Golf Course 18 Hole Flyover</h3>
-            <iframe width="840" height="470" src="https://www.youtube.com/embed/x6MadEl2giI?rel=0&amp;showinfo=0&autoplay=1" frameborder="0" encrypted-media" allowfullscreen></iframe>
-          </div>
+            <iframe width="840" height="470" src="https://www.youtube.com/embed/x6MadEl2giI?rel=0&showinfo=0&autoplay=1" frameborder="0" encrypted-media" allowfullscreen></iframe>
+            </div>
             <p>Click on a ball</p>
              <div class="grid-x grid-padding-x">
               <div class="large-4 medium-4 small-4 cell">
                 <div class="ball">
-      <div class="rounded-social-buttons purplebg">
-<p>TOWNELEY GOLF COURSE</p>
-        <img id="Ball" src="images/Ball1.png" alt="Hole 1" onclick="video()">
-        <img id="Ball" src="images/Ball2.png" alt="Hole 2" onclick="video1()">
-        <img id="Ball" src="images/Ball3.png" alt="Hole 3" onclick="video2()">
-        <img id="Ball" src="images/Ball4.png" alt="Hole 4" onclick="video3()">
-        <img id="Ball" src="images/Ball5.png" alt="Hole 5" onclick="video4()">
-        <img id="Ball" src="images/Ball6.png" alt="Hole 6" onclick="video5()">
-        <img id="Ball" src="images/Ball7.png" alt="Hole 7" onclick="video6()">
-        <img id="Ball" src="images/Ball8.png" alt="Hole 8" onclick="video7()">
-        <img id="Ball" src="images/Ball9.png" alt="Hole 9" onclick="video8()">
-
-
-        <img id="Ball" src="images/Ball10.png" alt="hole 10" onclick="video9()">
-        <img id="Ball" src="images/Ball11.png" alt="hole 11" onclick="video10()">
-        <img id="Ball" src="images/Ball12.png" alt="hole 12" onclick="video11()">
-        <img id="Ball" src="images/Ball13.png" alt="hole 13" onclick="video12()">
-        <img id="Ball" src="images/Ball14.png" alt="hole 14" onclick="video13()">
-        <img id="Ball" src="images/Ball15.png" alt="hole 15" onclick="video14()">
-        <img id="Ball" src="images/Ball16.png" alt="hole 16" onclick="video15()">
-        <img id="Ball" src="images/Ball17.png" alt="hole 17" onclick="video16()">
-        <img id="Ball" src="images/Ball18.png" alt="hole 18" onclick="video17()">
-
-      </div>
-               </div>
-
-             </div>
+                 <div class="rounded-social-buttons purplebg">
+                   <p>TOWNELEY GOLF COURSE</p>
+                    <img id="Ball" src="images/Ball1.png" alt="Hole 1" onclick="video()">
+                    <img id="Ball" src="images/Ball2.png" alt="Hole 2" onclick="video1()">
+                    <img id="Ball" src="images/Ball3.png" alt="Hole 3" onclick="video2()">
+                    <img id="Ball" src="images/Ball4.png" alt="Hole 4" onclick="video3()">
+                    <img id="Ball" src="images/Ball5.png" alt="Hole 5" onclick="video4()">
+                    <img id="Ball" src="images/Ball6.png" alt="Hole 6" onclick="video5()">
+                    <img id="Ball" src="images/Ball7.png" alt="Hole 7" onclick="video6()">
+                    <img id="Ball" src="images/Ball8.png" alt="Hole 8" onclick="video7()">
+                    <img id="Ball" src="images/Ball9.png" alt="Hole 9" onclick="video8()">
+                    <img id="Ball" src="images/Ball10.png" alt="hole 10" onclick="video9()">
+                    <img id="Ball" src="images/Ball11.png" alt="hole 11" onclick="video10()">
+                    <img id="Ball" src="images/Ball12.png" alt="hole 12" onclick="video11()">
+                    <img id="Ball" src="images/Ball13.png" alt="hole 13" onclick="video12()">
+                    <img id="Ball" src="images/Ball14.png" alt="hole 14" onclick="video13()">
+                    <img id="Ball" src="images/Ball15.png" alt="hole 15" onclick="video14()">
+                    <img id="Ball" src="images/Ball16.png" alt="hole 16" onclick="video15()">
+                    <img id="Ball" src="images/Ball17.png" alt="hole 17" onclick="video16()">
+                    <img id="Ball" src="images/Ball18.png" alt="hole 18" onclick="video17()">
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
-        </div>
       </div>
-
+    </div>
+<hr>
 
 
     <script src="js/vendor/jquery.js"></script>
