--- a/Bootstrap.html
+++ b/Bootstrap.html
@@ -18,7 +18,7 @@
 <!-- Code for the Header page and video -->
     <div class="grid-container1">
         <div class="">
-            <div id="video" class="embed-responsive embed-responsive-16by9">
+            <div id="Hvideo" class="embed-responsive embed-responsive-16by9">
             <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/7GZG0YUtspI?autoplay=1&controls=0&loop=1&playlist=7GZG0YUtspI&showinfo=0" frameborder="0"></iframe><span class="name"><img src="images/prairieLogo.png"></img></span>
             </div>
         </div>
@@ -29,7 +29,7 @@
  <!-- Code for the Brasserie page and video -->
     <div class="grid-container1">
         <div class="">
-            <div id="video" class="embed-responsive embed-responsive-16by9">
+            <div id="Hvideo" class="embed-responsive embed-responsive-16by9">
             <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/tju6KKxSF80?autoplay=1&controls=0&loop=1&playlist=tju6KKxSF80&showinfo=0" frameborder="0"></iframe><span class="name"><img src="images/prairieLogo.png"></img></span>
             </div>
         </div>
@@ -42,12 +42,39 @@
   <p>Click on the balls below</p>
   <p>The columns will automatically stack on top of each other when the screen is less than 768px wide.</p>
   <div class="row">
+
     <div  id="video" class="embed-responsive embed-responsive-16by9">
     <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/x6MadEl2giI?rel=0&amp;showinfo=0&autoplay=1"></iframe>
+
+  </div>
+
+  <div class="col-sm-6"><img src="images/CourseMap.png" usemap="#image-map">
+<map name="image-map">
+    <area target="_self" alt="Hole 1" title="Hole 1" onclick="video()" coords="234,354,10" shape="circle">
+    <area target="_self" alt="Hole 2" title="Hole 2" onclick="video1()" coords="99,269,10" shape="circle">
+    <area target="_self" alt="Hole 3" title="Hole 3" onclick="video2()" coords="65,170,10" shape="circle">
+    <area target="_self" alt="Hole 4" title="Hole 4" onclick="video3()" coords="214,83,10" shape="circle">
+    <area target="_self" alt="Hole 5" title="Hole 5" onclick="video4()" coords="25,68,10" shape="circle">
+    <area target="_self" alt="Hole 6" title="Hole 6" onclick="video5()" coords="287,81,10" shape="circle">
+    <area target="_self" alt="Hole 7" title="Hole 7" onclick="video6()" coords="273,130,10" shape="circle">
+    <area target="_self" alt="Hole 8" title="Hole 8" onclick="video7()" coords="122,248,10" shape="circle">
+    <area target="_self" alt="Hole 9" title="Hole 9" onclick="video8()" coords="299,167,10" shape="circle">
+    <area target="_self" alt="Hole 10" title="Hole 10" onclick="video9()" coords="292,385,10" shape="circle">
+    <area target="_self" alt="Hole 11" title="Hole 11" onclick="video10()" coords="368,202,10" shape="circle">
+    <area target="_self" alt="Hole 12" title="Hole 12" onclick="video11()" coords="230,55,10" shape="circle">
+    <area target="_self" alt="Hole 13" title="Hole 13" onclick="video12()" coords="532,112,10" shape="circle">
+    <area target="_self" alt="Hole 14" title="Hole 14" onclick="video13()" coords="291,125,10" shape="circle">
+    <area target="_self" alt="Hole 15" title="Hole 15" onclick="video14()" coords="504,173,10" shape="circle">
+    <area target="_self" alt="Hole 16" title="Hole 16" onclick="video15()" coords="378,213,10" shape="circle">
+    <area target="_self" alt="Hole 17" title="Hole 17" onclick="video16()" coords="475,233,10" shape="circle">
+    <area target="_self" alt="Hole 18" title="Hole 18" onclick="video17()" coords="377,237,10" shape="circle">
+</map>
+
+ 
+
   </div>
   <div class="col-sm-6">
-
-      <img id="Ball" src="images/Ball1.png" alt="Hole 1" onclick="video()">
+     <img id="Ball" src="images/Ball1.png" alt="Hole 1" onclick="video()">
       <img id="Ball" src="images/Ball2.png" alt="Hole 2" onclick="video1()">
       <img id="Ball" src="images/Ball3.png" alt="Hole 3" onclick="video2()">
       <img id="Ball" src="images/Ball4.png" alt="Hole 4" onclick="video3()">
@@ -56,10 +83,6 @@
       <img id="Ball" src="images/Ball7.png" alt="Hole 7" onclick="video6()">
       <img id="Ball" src="images/Ball8.png" alt="Hole 8" onclick="video7()">
       <img id="Ball" src="images/Ball9.png" alt="Hole 9" onclick="video8()">
-
-  </div>
-  <div class="col-sm-6">
-
         <img id="Ball" src="images/Ball10.png" alt="hole 10" onclick="video9()">
         <img id="Ball" src="images/Ball11.png" alt="hole 11" onclick="video10()">
         <img id="Ball" src="images/Ball12.png" alt="hole 12" onclick="video11()">
