--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Foundation for Sites</title>
+    <title>Towneley Golf Course Flyover</title>
     <link rel="stylesheet" href="css/Newfoundation.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="Prairiecss/style.css">
@@ -17,7 +17,7 @@
 <!-- Code for the Header page and video -->
     <div class="grid-container1">
         <div class="large-12">
-            <div id="video" class="flex-video1">
+            <div id="Hvideo" class="flex-video1">
             <iframe src="https://www.youtube.com/embed/7GZG0YUtspI?autoplay=1&controls=0&loop=1&playlist=7GZG0YUtspI&showinfo=0" frameborder="0"></iframe><span class="name"><img src="images/prairieLogo.png"></img></span>
             </div>
         </div>
@@ -28,28 +28,98 @@
  <!-- Code for the Brasserie page and video -->
     <div class="grid-container1">
         <div class="large-12">
-            <div id="video" class="flex-video1">
+            <div id="Gvideo" class="flex-video1">
             <iframe src="https://www.youtube.com/embed/tju6KKxSF80?autoplay=1&controls=0&loop=1&playlist=tju6KKxSF80&showinfo=0" frameborder="0"></iframe><span class="name"><img src="images/prairieLogo.png"></img></span>
             </div>
         </div>
     </div>
  <!-- End of Brasserie Code -->
-
-    <div class="grid-container">
+<hr>
+ <!-- Code for the Questpage and video -->
+    <div class="grid-container1">
+        <div class="large-12">
+            <div id="Gvideo" class="flex-video1">
+            <iframe src="https://www.youtube.com/embed/xFTAtDYYwUY?autoplay=1&controls=0&loop=1&playlist=xFTAtDYYwUY&showinfo=0" frameborder="0"></iframe><span class="name"><img src="images/prairieLogo.png"></img></span>
+            </div>
+        </div>
+    </div>
+ <!-- End of Quest Code -->
+ <hr>
+ <!-- Code for the Conference and video -->
+    <div class="grid-container1">
+        <div class="large-12">
+            <div id="Gvideo" class="flex-video1">
+            <iframe src="https://www.youtube.com/embed/b0JhSjJXm_k?autoplay=1&controls=0&loop=1&playlist=b0JhSjJXm_k&showinfo=0" frameborder="0"></iframe><span class="name"><img src="images/prairieLogo.png"></img></span>
+            </div>
+        </div>
+    </div>
+ <!-- End of Conference Code -->
+  <hr>
+ <!-- Code for the Juniors and video -->
+    <div class="grid-container1">
+        <div class="large-12">
+            <div id="Gvideo" class="flex-video1">
+            <iframe src="https://www.youtube.com/embed/m0DOMxcD3Hs?autoplay=1&controls=0&loop=1&playlist=m0DOMxcD3Hs&showinfo=0" frameborder="0"></iframe><span class="name"><img src="images/prairieLogo.png"></img></span>
+            </div>
+        </div>
+    </div>
+ <!-- End of Juniors Code -->
+  <hr>
+ <!-- Code for the Pitch and Putt and video -->
+    <div class="grid-container1">
+        <div class="large-12">
+            <div id="Gvideo" class="flex-video1">
+            <iframe src="https://www.youtube.com/embed/GhghQ__Lu9A?autoplay=1&controls=0&loop=1&playlist=GhghQ__Lu9A&showinfo=0" frameborder="0"></iframe><span class="name"><img src="images/prairieLogo.png"></img></span>
+            </div>
+        </div>
+    </div>
+ <!-- End of Pitch and Putt Code -->
+   <hr>
+ <!-- Code for the Mini Golf and video -->
+    <div class="grid-container1">
+        <div class="large-12">
+            <div id="Gvideo" class="flex-video1">
+            <iframe src="https://www.youtube.com/embed/w4-BuZmxpD0?autoplay=1&controls=0&loop=1&playlist=w4-BuZmxpD0&showinfo=0" frameborder="0"></iframe><span class="name"><img src="images/prairieLogo.png"></img></span>
+            </div>
+        </div>
+    </div>
+ <!-- End of Mini GolfCode -->
+   <hr>
+ <!-- Code for the Football and video -->
+    <div class="grid-container1">
+        <div class="large-12">
+            <div id="Gvideo" class="flex-video1">
+            <iframe src="https://www.youtube.com/embed/GcWqWhMXnXY?autoplay=1&controls=0&loop=1&playlist=GcWqWhMXnXY&showinfo=0" frameborder="0"></iframe><span class="name"><img src="images/prairieLogo.png"></img></span>
+            </div>
+        </div>
+    </div>
+ <!-- End of Football Code -->
     <hr>
+ <!-- Code for the Driving Range and video -->
+    <div class="grid-container1">
+        <div class="large-12">
+            <div id="Gvideo" class="flex-video1">
+            <iframe src="https://www.youtube.com/embed/xvj725rLAUs?autoplay=1&controls=0&loop=1&playlist=xvj725rLAUs&showinfo=0" frameborder="0"></iframe><span class="name"><img src="images/prairieLogo.png"></img></span>
+            </div>
+        </div>
+    </div>
+ <!-- End of Driving Range Code -->
+
+<div class="grid-container">
       <div class="grid-x grid-padding-x">
         <div class="large-12 cell">
           <div class="callout">
-            <div id="video" class="flex-video  purplebg">
+            <div id="video" class="flex-video embed-responsive embed-responsive-16by9">
             <h3>Towneley Golf Course 18 Hole Flyover</h3>
-            <iframe width="840" height="470" src="https://www.youtube.com/embed/x6MadEl2giI?rel=0&showinfo=0&autoplay=1" frameborder="0" encrypted-media" allowfullscreen></iframe>
+            <iframe  src="https://www.youtube.com/embed/x6MadEl2giI?rel=0&showinfo=0&autoplay=1"></iframe>
+
             </div>
-            <p>Click on a ball</p>
+
              <div class="grid-x grid-padding-x">
               <div class="large-4 medium-4 small-4 cell">
-                <div class="ball">
-                 <div class="rounded-social-buttons purplebg">
-                   <p>TOWNELEY GOLF COURSE</p>
+                <div class="">
+                 <div class="rounded-social-buttons ball" style="background-color: black">
+            <p >Click on a ball</p>
                     <img id="Ball" src="images/Ball1.png" alt="Hole 1" onclick="video()">
                     <img id="Ball" src="images/Ball2.png" alt="Hole 2" onclick="video1()">
                     <img id="Ball" src="images/Ball3.png" alt="Hole 3" onclick="video2()">
@@ -76,7 +146,7 @@
       </div>
     </div>
 <hr>
-
+<a href="MAPindex.html">Map Version</a>
 
     <script src="js/vendor/jquery.js"></script>
     <script src="js/Golf.js"></script>
