--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
 
 
   <body>
-
+<p>If any of the header videos do not automatically play (Google Chrome), just click the Prairie Village Text and the page will load the video.<br> This is due to the amount of video files on the page itself and a new setting within latest Google Chrome.</p>
+There is also a <a href="MAPindex.html">Map Version</a> of the hole flyover.
 <!-- Code for the Header page and video -->
-    <div class="grid-container1">
+    <div class="grid-container1">Main Header
         <div class="large-12">
             <div id="Hvideo" class="flex-video1">
-            <iframe src="https://www.youtube.com/embed/7GZG0YUtspI?autoplay=1&controls=0&loop=1&playlist=7GZG0YUtspI&showinfo=0" frameborder="0"></iframe><span class="name"><img src="images/prairieLogo.png"></img></span>
+            <iframe src="https://www.youtube.com/embed/7GZG0YUtspI?autoplay=1&controls=0&loop=1&playlist=7GZG0YUtspI&showinfo=0" frameborder="0"></iframe><span class="name"><img src="images/prairieLogo.png" alt="Prairie Logo" onclick="Hvideo()"></img></span>
             </div>
         </div>
     </div>
@@ -26,85 +27,85 @@
  <!-- End of Header Code -->
 <hr>
  <!-- Code for the Brasserie page and video -->
-    <div class="grid-container1">
+    <div class="grid-container1">Brasserie Header
         <div class="large-12">
-            <div id="Gvideo" class="flex-video1">
-            <iframe src="https://www.youtube.com/embed/tju6KKxSF80?autoplay=1&controls=0&loop=1&playlist=tju6KKxSF80&showinfo=0" frameborder="0"></iframe><span class="name"><img src="images/prairieLogo.png"></img></span>
+            <div id="Bvideo" class="flex-video1">
+            <iframe src="https://www.youtube.com/embed/tju6KKxSF80?autoplay=1&controls=0&loop=1&playlist=tju6KKxSF80&showinfo=0" frameborder="0"></iframe><span class="name"><img src="images/prairieLogo.png" alt="Prairie Logo" onclick="Bvideo()"></img></span>
             </div>
         </div>
     </div>
  <!-- End of Brasserie Code -->
 <hr>
  <!-- Code for the Questpage and video -->
-    <div class="grid-container1">
+    <div class="grid-container1">Quest Header
         <div class="large-12">
-            <div id="Gvideo" class="flex-video1">
-            <iframe src="https://www.youtube.com/embed/xFTAtDYYwUY?autoplay=1&controls=0&loop=1&playlist=xFTAtDYYwUY&showinfo=0" frameborder="0"></iframe><span class="name"><img src="images/prairieLogo.png"></img></span>
+            <div id="Qvideo" class="flex-video1">
+            <iframe src="https://www.youtube.com/embed/xFTAtDYYwUY?autoplay=1&controls=0&loop=1&playlist=xFTAtDYYwUY&showinfo=0" frameborder="0"></iframe><span class="name"><img src="images/prairieLogo.png" alt="Prairie Logo" onclick="Qvideo()"></img></span>
             </div>
         </div>
     </div>
  <!-- End of Quest Code -->
  <hr>
  <!-- Code for the Conference and video -->
-    <div class="grid-container1">
+    <div class="grid-container1">Conference Header
         <div class="large-12">
-            <div id="Gvideo" class="flex-video1">
-            <iframe src="https://www.youtube.com/embed/b0JhSjJXm_k?autoplay=1&controls=0&loop=1&playlist=b0JhSjJXm_k&showinfo=0" frameborder="0"></iframe><span class="name"><img src="images/prairieLogo.png"></img></span>
+            <div id="Cvideo" class="flex-video1">
+            <iframe src="https://www.youtube.com/embed/b0JhSjJXm_k?autoplay=1&controls=0&loop=1&playlist=b0JhSjJXm_k&showinfo=0" frameborder="0"></iframe><span class="name"><img src="images/prairieLogo.png" alt="Prairie Logo" onclick="Cvideo()"></img></span>
             </div>
         </div>
     </div>
  <!-- End of Conference Code -->
   <hr>
  <!-- Code for the Juniors and video -->
-    <div class="grid-container1">
+    <div class="grid-container1">Juniors Header
         <div class="large-12">
-            <div id="Gvideo" class="flex-video1">
-            <iframe src="https://www.youtube.com/embed/m0DOMxcD3Hs?autoplay=1&controls=0&loop=1&playlist=m0DOMxcD3Hs&showinfo=0" frameborder="0"></iframe><span class="name"><img src="images/prairieLogo.png"></img></span>
+            <div id="Jvideo" class="flex-video1">
+            <iframe src="https://www.youtube.com/embed/m0DOMxcD3Hs?autoplay=1&controls=0&loop=1&playlist=m0DOMxcD3Hs&showinfo=0" frameborder="0"></iframe><span class="name"><img src="images/prairieLogo.png" alt="Prairie Logo" onclick="Jvideo()"></img></span>
             </div>
         </div>
     </div>
  <!-- End of Juniors Code -->
   <hr>
  <!-- Code for the Pitch and Putt and video -->
-    <div class="grid-container1">
+    <div class="grid-container1">Pitch and Putt Header
         <div class="large-12">
-            <div id="Gvideo" class="flex-video1">
-            <iframe src="https://www.youtube.com/embed/GhghQ__Lu9A?autoplay=1&controls=0&loop=1&playlist=GhghQ__Lu9A&showinfo=0" frameborder="0"></iframe><span class="name"><img src="images/prairieLogo.png"></img></span>
+            <div id="Pvideo" class="flex-video1">
+            <iframe src="https://www.youtube.com/embed/GhghQ__Lu9A?autoplay=1&controls=0&loop=1&playlist=GhghQ__Lu9A&showinfo=0" frameborder="0"></iframe><span class="name"><img src="images/prairieLogo.png" alt="Prairie Logo" onclick="Pvideo()"></img></span>
             </div>
         </div>
     </div>
  <!-- End of Pitch and Putt Code -->
    <hr>
  <!-- Code for the Mini Golf and video -->
-    <div class="grid-container1">
+    <div class="grid-container1">Mini Golf Header
         <div class="large-12">
-            <div id="Gvideo" class="flex-video1">
-            <iframe src="https://www.youtube.com/embed/w4-BuZmxpD0?autoplay=1&controls=0&loop=1&playlist=w4-BuZmxpD0&showinfo=0" frameborder="0"></iframe><span class="name"><img src="images/prairieLogo.png"></img></span>
+            <div id="Mvideo" class="flex-video1">
+            <iframe src="https://www.youtube.com/embed/w4-BuZmxpD0?autoplay=1&controls=0&loop=1&playlist=w4-BuZmxpD0&showinfo=0" frameborder="0"></iframe><span class="name"><img src="images/prairieLogo.png" alt="Prairie Logo" onclick="Mvideo()"></img></span>
             </div>
         </div>
     </div>
  <!-- End of Mini GolfCode -->
    <hr>
  <!-- Code for the Football and video -->
-    <div class="grid-container1">
+    <div class="grid-container1">Football Header
         <div class="large-12">
-            <div id="Gvideo" class="flex-video1">
-            <iframe src="https://www.youtube.com/embed/GcWqWhMXnXY?autoplay=1&controls=0&loop=1&playlist=GcWqWhMXnXY&showinfo=0" frameborder="0"></iframe><span class="name"><img src="images/prairieLogo.png"></img></span>
+            <div id="Fvideo" class="flex-video1">
+            <iframe src="https://www.youtube.com/embed/GcWqWhMXnXY?autoplay=1&controls=0&loop=1&playlist=GcWqWhMXnXY&showinfo=0" frameborder="0"></iframe><span class="name"><img src="images/prairieLogo.png" alt="Prairie Logo" onclick="Fvideo()"></img></span>
             </div>
         </div>
     </div>
  <!-- End of Football Code -->
     <hr>
  <!-- Code for the Driving Range and video -->
-    <div class="grid-container1">
+    <div class="grid-container1">Driving Range Header
         <div class="large-12">
-            <div id="Gvideo" class="flex-video1">
-            <iframe src="https://www.youtube.com/embed/xvj725rLAUs?autoplay=1&controls=0&loop=1&playlist=xvj725rLAUs&showinfo=0" frameborder="0"></iframe><span class="name"><img src="images/prairieLogo.png"></img></span>
+            <div id="Dvideo" class="flex-video1">
+            <iframe src="https://www.youtube.com/embed/xvj725rLAUs?autoplay=1&controls=0&loop=1&playlist=xvj725rLAUs&showinfo=0" frameborder="0"></iframe><span class="name"><img src="images/prairieLogo.png" alt="Prairie Logo" onclick="Dvideo()"></img></span>
             </div>
         </div>
     </div>
  <!-- End of Driving Range Code -->
-
+<hr>
 <div class="grid-container">
       <div class="grid-x grid-padding-x">
         <div class="large-12 cell">
@@ -147,7 +148,7 @@
     </div>
 <hr>
 <a href="MAPindex.html">Map Version</a>
-
+<hr><hr><hr><hr><hr>
     <script src="js/vendor/jquery.js"></script>
     <script src="js/Golf.js"></script>
     <script src="js/vendor/what-input.js"></script>
